--- a/cdn/default.css
+++ b/cdn/default.css
@@ -7,7 +7,7 @@ div[data-ted-share-type=fls-jam] hr{
 div[data-ted-share-type=fls-jam] *::-webkit-scrollbar{
 width:0;
 }
-div[data-ted-share-type=fls-jam]{width:100vw; height:100vh; background:rgba(1,1,1,.4); position:fixed;top:0;left:0; overflow:scroll; animation:opac .4s linear;}
+div[data-ted-share-type=fls-jam]{width:100vw; height:100vh; background:rgba(1,1,1,.4); position:fixed;top:0;left:0; overflow:scroll; animation:opac .4s linear;z-index:1200;}
 div[data-ted-share-type=container]{
 				height:auto;border-bottom:1px solid #6610f2;background:white; transition:0.5s;
 				border-radius:0 0 10px 10px; overflow:hidden; animation:fromup 0.3s linear; 
