--- a/cdn/default.css
+++ b/cdn/default.css
@@ -1,107 +1,2 @@
-body{
- padding:0;margin:0;
-}
-div[data-ted-share-type=fls-jam] hr{
- border:0; height:2px; background:#efefef;
-}
-div[data-ted-share-type=fls-jam] *::-webkit-scrollbar{
-width:0;
-}
-div[data-ted-share-type=fls-jam]{width:100vw; height:100vh; background:rgba(1,1,1,.4); position:fixed;top:0;left:0; overflow:scroll; animation:opac .4s linear;z-index:1200;}
-div[data-ted-share-type=container]{
-				height:auto;border-bottom:1px solid #6610f2;background:white; transition:0.5s;
-				border-radius:0 0 10px 10px; overflow:hidden; animation:fromup 0.3s linear; 
-	}
-div[data-ted-share-type=container] div[data-ted-share-type=head]{
- width:100%;text-align: center;padding:5px;
-}
-div[data-ted-share-type=container] div[data-ted-share-type=head] h3{
- max-width:calc(100% - 20px);white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;margin:10px;
-}
-div[data-ted-share-type=container] div[data-ted-share-type=head] button{
- background: transparent;border:none;
-}
-div[data-ted-share-type=main]{
- width:100%; display:flex;align-items: center;
-}
-div[data-ted-share-type=container] div[data-ted-share-type=apis]{
-   
-				width:auto;max-width:90%;margin:auto;height:auto;margin-top:20px; overflow:scroll;
-}
-div[data-ted-share-type=copy]{
-				display:flex;width:90%;margin:5%;margin-bottom:5px; height:40px;
-}
-div[data-ted-share-type=copy] input[data-ted-share-type=copy]{
-				width:calc(100% - 60px);border-radius:6px;border:1px solid #efefef; padding:5px; transition:0.4s;
-}
-div[data-ted-share-type=copy] *{
-				outline:none;
-}
-div[data-ted-share-type=apis] div[data-type=flex]{
-				display:inline-flex;width:auto;
-}
-div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button] img , div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button] svg{
-height:100%;width:100%;
-}
-div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button], button[data-ted-share-type=copy]{
-		padding:0;		width:60px;height:60px;background:#efefef;margin:5px;border:none; transition:0.3s; padding:0;border-radius:15px;outline:none; overflow:hidden;
-}
-div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button] svg{
-				height:60px;width:60px;margin:0;
-}
-button[data-ted-share-type=copy]{
-				height:auto;margin:0; margin-left:5px; background: transparent;
-}
-div.light[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button]:hover ,
-div.light[data-ted-share-type=container] button[data-ted-share-type=copy]:focus,div.light[data-ted-share-type=container] .btn-share:focus{
-box-shadow:5px 5px 10px #efefef;outline:none;
-}
-div.light[data-ted-share-type=container]
-input[data-ted-share-type=copy]:focus{
-box-shadow:5px 5px 10px #efefef;outline:none;border:0.1px solid #6610f2;
-}
-@keyframes removal{
- to{
- opacity:0;
- }
-}
-div.dark[data-ted-share-type=container]{
-				background:#121226;
-}
-div.dark[data-ted-share-type=container] *{
-				color:#efefef;
-}
-div.dark[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button]:hover , button[data-ted-share-type=copy]:focus,div.dark[data-ted-share-type=container]
-input[data-ted-share-type=copy]:focus,div.dark[data-ted-share-type=container] .btn-share:focus{
-
-box-shadow:3px 3px 9px rgba(1,1,1,0.4);
-}
-div.dark[data-ted-share-type=container]
-input[data-ted-share-type=copy]{
-				background: transparent;border-color:white;
-}
-@keyframes opac{
- from{
-  background:rgba(1,1,1,0);
- }to{
-  background:rgba(1,1,1,.4);
- }
-}
-@keyframes fromup{
- 10%{
-  transform:scaleX(0.99);
- }50%{
-  transform:scaleX(1);
- }
-}
-.btn-share{
- float: center;margin:auto;
- background: transparent;
- border:1px solid #6610f2;font-size:15px; padding:5px;border-radius:5px;outline:none;
-}
-div.but-oths{
- display:flex; justify-content: center;align-items: center;
- width:100%;margin-top:10px;
-}
+body{padding:0;margin:0}div[data-ted-share-type=fls-jam] hr{border:0;height:2px;background:#efefef}div[data-ted-share-type=fls-jam] ::-webkit-scrollbar{width:0}div[data-ted-share-type=fls-jam]{width:100vw;height:100vh;background:rgba(1,1,1,.4);position:fixed;top:0;left:0;overflow:scroll;animation:opac .4s linear;z-index:1200}div[data-ted-share-type=container]{height:auto;border-bottom:1px solid #6610f2;background:#fff;transition:.5s;border-radius:0 0 10px 10px;overflow:hidden;animation:fromup .3s linear}div[data-ted-share-type=container] div[data-ted-share-type=head]{width:100%;text-align:center;padding:5px}div[data-ted-share-type=container] div[data-ted-share-type=head] h3{max-width:calc(100% - 20px);white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin:10px}div[data-ted-share-type=container] div[data-ted-share-type=head] button{background:0 0;border:none}div[data-ted-share-type=main]{width:100%;display:flex;align-items:center}div[data-ted-share-type=container] div[data-ted-share-type=apis]{width:auto;max-width:90%;margin:auto;height:auto;margin-top:20px;overflow:scroll}div[data-ted-share-type=copy]{display:flex;width:90%;margin:5%;margin-bottom:5px;height:40px}div[data-ted-share-type=copy] input[data-ted-share-type=copy]{width:calc(100% - 60px);border-radius:6px;border:1px solid #efefef;padding:5px;transition:.4s}div[data-ted-share-type=copy] *{outline:0}div[data-ted-share-type=apis] div[data-type=flex]{display:inline-flex;width:auto}div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button] img,div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button] svg{height:100%;width:100%}button[data-ted-share-type=copy],div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button]{padding:0;width:60px;height:60px;background:#efefef;margin:5px;border:none;transition:.3s;padding:0;border-radius:15px;outline:0;overflow:hidden}div[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button] svg{height:60px;width:60px;margin:0}button[data-ted-share-type=copy]{height:auto;margin:0;margin-left:5px;background:0 0}div.light[data-ted-share-type=container] .btn-share:focus,div.light[data-ted-share-type=container] button[data-ted-share-type=copy]:focus,div.light[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button]:hover{box-shadow:5px 5px 10px #efefef;outline:0}div.light[data-ted-share-type=container] input[data-ted-share-type=copy]:focus{box-shadow:5px 5px 10px #efefef;outline:0;border:.1px solid #6610f2}@keyframes removal{to{opacity:0}}div.dark[data-ted-share-type=container]{background:#121226}div.dark[data-ted-share-type=container] *{color:#efefef}button[data-ted-share-type=copy]:focus,div.dark[data-ted-share-type=container] .btn-share:focus,div.dark[data-ted-share-type=container] div[data-ted-share-type=apis] button[data-share-api-button]:hover,div.dark[data-ted-share-type=container] input[data-ted-share-type=copy]:focus{box-shadow:3px 3px 9px rgba(1,1,1,.4)}div.dark[data-ted-share-type=container] input[data-ted-share-type=copy]{background:0 0;border-color:#fff}@keyframes opac{from{background:rgba(1,1,1,0)}to{background:rgba(1,1,1,.4)}}@keyframes fromup{10%{transform:scaleX(.99)}50%{transform:scaleX(1)}}.btn-share{float:center;margin:auto;background:0 0;border:1px solid #6610f2;font-size:15px;padding:5px;border-radius:5px;outline:0}div.but-oths{display:flex;justify-content:center;align-items:center;width:100%;margin-top:10px}
+/* Created by boosted & formal apps */
